**pnp-0.6.20 ??/??/2012**
  * Feature: Allow RRD unknown values ( Simon Meggle )
  * feature: Interactive delete mode added to check_rrds.pl ( Simon Meggle ) 
  * Bugfix:  Allow multiple gearman servers ( Craig Barraclough )

**pnp-0.6.19 09/01/2012**
  * Feature: Parameter "width" added to popup controller ( Andreas Doehler ) 
  * Fix:     simplify/improve apache rules ( Christoph Anton Mitterer )
  * Fix:     Check for missing PHP GD functions 
  * Bugfix:  socketDOMAIN changed to AF_INET while using livstatus tcp socket ( Rene Koch )

**pnp-0.6.18 06/28/2012**
  * Bugfix:  Fixed STORAGE_TYPE and CUSTOM_TEMPLATE vars used in custom templates
  * Bugfix:  Blank screen on PHP 5.4 fixed
  * Feature: Allow multiple gearman job servers
  * Feature: New helper function rrd::debug()
  * Feature: New templates check_jmx4perl_*.php

**pnp-0.6.17 03/25/2012**
  * Bugfix:  Fixed rrd_convert.pl while running with --dry-run
  * Bugfix:  logging.c include missing header files ( Lars Vogdt )       
  * Bugfix:  Check if pnp4nagios/etc/rra.cfg is readable
  * Bugfix:  rrd_convert.pl use XML tag TEMPLATE instead of CHECKCOMMAND to selects RRDs ( Sven Velt )
  * Feature: npcdmod.o increase perfdata buffer and log discarded perfdata ( Birger Schmidt )
  * Feature: rrd_modify.pl to change number of data sources of an RRD file
  * Feature: New template check_apachestatus_auto.php
  * Feature: Implement etc/config.d to place config snippets ( Lars Michelsen )

**pnp-0.6.16 11/21/2011**
  * Bugfix:  Fixed single quoted check_multi labels (Reported by Matthias Flacke)
  * Bugfix:  Append missing slash to perfdata_spool_dir ( Reported by Juergen-Michael Radtke ) 
  * Bugfix:  Fixed jQuery-ui multisite theme
  * Feature: PDF margins are now adjustable via config.php ( Thomas Witzenrath )
  * Feature: Support for PDF size 'letter' added ( Robert Becht )

**pnp-0.6.15 09/15/2011**
  * Bugfix:  Fixed Overview link (reported by Stefan Triep)